--- a/CSS/style.css
+++ b/CSS/style.css
@@ -216,7 +216,7 @@ header main {
 
 .contato p {
     line-height: 29px;
-    font-size: 18px;
+    font-size: 17px;
     color: white;
     max-width: 600px;
     display: inline-block;
@@ -230,7 +230,7 @@ header main {
 .contato a {
     text-decoration: none;
     padding: 12px 50px;
-    border-radius: 15px;
+    border-radius: 5px;
     background-color: rgb(90, 84, 56);
     color: white;
     transition: .3s;
@@ -305,5 +305,10 @@ footer p {
 
     .main_wraper h1 {
         font-size: 45px;
+    }
+
+    .sobre_nos {
+        padding: 70px 10%;
+        width: 100%;
     }
 }
